--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "echo 'No build steps required'"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^5.6.0",
+    "mysql2": "^3.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
