--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "mysql2": "^3.4.0"
   },
   "devDependencies": {
