--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1",
-    "mysql2": "^3.4.0"
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
+    "mysql2": "^3.5.1",
     "nodemon": "^2.0.22"
   }
 }
