--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "mysql2": "^3.5.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "mongoose": "^7.3.1"
   }
 }
