--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.1"
+    "mongodb": "^5.6.0"
   },
   "devDependencies": {
     "mysql2": "^3.5.1",
-    "nodemon": "^2.0.22",
-    "mongoose": "^7.3.1"
+    "nodemon": "^2.0.22"
   }
 }
