--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "echo 'No build steps required'"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^5.6.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "mongodb": "^5.7.0",
     "mysql2": "^3.5.1",
     "nodemon": "^2.0.22"
   }
